# hass-avocado-price-prediction

./: .gitignore  README.md  pyproject.toml
src/: collect_data.py  hass_avocado_price_prediction.ipynb  main.py  process_data.py  train_models.py
src/avocado-data/: 2023-plu-total-hab-data.csv  SP500.csv  Volume Data  Projections - Hass Avocado Board 2022.csv  Volume Data  Projections - Hass Avocado Board 2023.csv  WEI.csv  gasoline_price.csv
src/avocado-data/combined_data/: combined_dataset.csv
src/avocado-data/raw_data/: 2022-plu-total-hab-data.csv  2024-plu-total-hab-data.csv  2025-plu-total-hab-data.csv  Volume Data  Projections - Hass Avocado Board 2024.csv  Volume Data  Projections - Hass Avocado Board 2025.csv  gasoline_price.csv
src/avocado-data/train_and_test_data/: test_data.csv
